# autonomous-care-algorithms

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: add-condition.md  bug.md  clinical-correction.md  config.yml
.github/workflows/: tests.yml
adapters/: __init__.py  extraction.py
adapters/tests/: test_extraction.py
conditions/alcohol_withdrawal/: README.md  __init__.py  algorithm.md  ciwa_ar.py  references.bib
conditions/ankle_injury/: README.md  __init__.py  algorithm.md  ottawa_rules.py  references.bib
conditions/appendicitis/: README.md  __init__.py  algorithm.md  alvarado.py  references.bib
conditions/atrial_fibrillation/: README.md  __init__.py  algorithm.md  cha2ds2_vasc.py  has_bled.py  references.bib
conditions/cervical_spine_trauma/: README.md  __init__.py  algorithm.md  canadian_c_spine.py  nexus.py  references.bib
conditions/chest_pain/: README.md  __init__.py  algorithm.md  heart_score.py  references.bib
conditions/chronic_kidney_disease/: README.md  __init__.py  algorithm.md  kdigo_staging.py  references.bib
conditions/croup/: README.md  __init__.py  algorithm.md  references.bib  westley.py
conditions/deep_vein_thrombosis/: README.md  __init__.py  algorithm.md  wells_dvt.py  (+1 more)
docs/: adapter.md  api.md  architecture.md  autonomous-setup.md  mcp.md  methodology.md
engine/: __init__.py  api.py  dispatch.py  mcp_server.py  registry.py
evals/: __init__.py  harness.py  vignettes.py
(+121 files in other folders)
