[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-care-algorithms"
version = "0.20.0"
description = "Open-source, citation-backed clinical decision algorithms for common primary care presentations."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "txthedx" }]
keywords = ["clinical-decision-support", "primary-care", "guidelines", "open-source"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]
mcp = ["mcp>=1.2"]

[project.urls]
Homepage = "https://github.com/txthedx/autonomous-care-algorithms"
Issues = "https://github.com/txthedx/autonomous-care-algorithms/issues"

[tool.setuptools.packages.find]
include = ["conditions*", "engine*"]

[tool.pytest.ini_options]
testpaths = ["conditions", "engine"]
python_files = ["test_*.py"]
addopts = "-ra"
